Refer tooltip text to root view.

With the new async hit-testing code, the RenderWidgetHostViewGuest-
specific code in RenderWidgetHostInputEventRouter::FindMouseEventTarget
no longer seems to be hit, and thus mouse events are bypassing the
embedder (and hence the BrowserPlugin) for PDFs.

This CL changes RenderWidgetHostViewGuest so that it refers tooltip
text requests directly to the root view, instead of sending them to
the BrowserPlugin.

Bug: 807236
Change-Id: Ic943e6bca70035fb5ac9198281412fbc6b7887f1
Reviewed-on: https://chromium-review.googlesource.com/894145
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533306}
Former-commit-id: 4d39420bc8a69e9374b120df9e49828537d31f69