content/browser/frame_host/render_widget_host_view_guest.cc
@@ -366,8 +366,9 @@ RenderWidgetHostViewGuest::GetTouchSelectionControllerClientManager() {
 
 void RenderWidgetHostViewGuest::SetTooltipText(
     const base::string16& tooltip_text) {
-  if (guest_)
-    guest_->SetTooltipText(tooltip_text);
+  RenderWidgetHostViewBase* root_view = GetRootView(this);
+  if (root_view)
+    root_view->SetTooltipText(tooltip_text);
 }
 
 void RenderWidgetHostViewGuest::SendSurfaceInfoToEmbedderImpl(
